# end_to_end_income_prediction_project

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
docs/: index.md
models/: preprocessor.pkl
notebooks/: data_exploration.ipynb  model_evaluation.ipynb
src/: __init__.py  api.py  cli.py  config.py  data_loader.py  predict.py  train.py
src/features/: feature_engineering.py
src/utils/: helpers.py  preprocessing.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_config.py  test_data_loader.py  test_feature_engineering.py  test_integration.py  test_predict.py  test_preprocessing.py  test_train.py
